--- a/detail.html
+++ b/detail.html
@@ -16,11 +16,11 @@
                         <a href="#">Reviews</a>
                         <a href="#">Categories</a>
                         <a href="#">About us</a>
-                        <button>Login</button>
+                        <i class="fas fa-search" class="search"></i>&nbsp;&nbsp;<span class="span-search">Search</span>
                         <i class="fas fa-shopping-cart"></i><span>0</span>
                     </div>
-                 </nav>
-                 <div class="book-detail">
+                </nav>
+                <div class="book-detail">
                     <div class="book-detail-to-buy">
                         <img src="img/p1.jpg"/>
                         <a href="#">By Now</a>
@@ -29,10 +29,19 @@
                         <h2>ဆက်ပြီးမပွင့်နိုင်သောပန်းများ</h2>
                         <a href="#">By မွန်ဟော်စီ</a>
                         <a href="#">20 reviews</a>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus a impedit amet accusantium dignissimos. Molestias modi, laudantium est, quia ipsum veritatis similique excepturi fugit porro doloremque aliquid, sunt magni dignissimos?</p>
-                        <p>Self-improvement</p>
-                        <p>200pages</p>
-                        <p>Published on 1st Oct</p>
+                        <p>ဤစာအုပ်သည် ဆရာမ ရှစ်လအချိန်ယူပြီးရေးခဲ့သည့် စာအုပ်ဖြစ်ပါသည်။ စိတ်နယ်လွန်ဖြစ်ရပ်ဆန်းအများကြီးရှိသော နိုင်ငံတစ်ခုမှာဇာတ်အိမ်စတည်ခဲ့သည်ဟု သိရပါသည်။ အသံနှင့်ပါနားထောင်လို့ရသည့် ဇာတ်ဝင်ခန်းများလည်းပါဝင်ပါသည်။ စာမျက်နှာလေးရာကျော်ရှိသောစာအုပ်ကိုဖတ်ရင်း နိုင်ငံပေါင်းစုံကို ရောက်သွားရပါလိမ့်မယ်။ လောကအသစ်၊ အယူအဆသစ်တွေ ကိုတွေ့မြင်ခံစားရမှာဖြစ်ပါသည်။ ဆရာမ၏ ဆက်ရန်ရှိသေးသည်၊ ဆက်ရန်မရှိတော့ပါဆိုတဲ့ စာအုပ်တွေကိုနှစ်ခြိုက်စွဲလမ်းခဲ့ကြသော စာဖတ်ပရိသတ်များ၏ တောင့်တမျှော်လင့်မှုတွေကိုဖြည့်ဆည်းပေးလိုက်သည့် စာအုပ်တစ်အုပ်ဖြစ်ပါသည်။ အနောက်နိုင်ငံသားများ၏ မမြင်အပ်သောလောကဆိုင်ရာ ထူးဆန်းတဲ့အယူအဆများကို ဗုဒ္ဓဘာသာရှုထောင့်ကနေ ချဥ်းကပ်ပြီး နှိုင်းယှဥ်ရေးသားထားခဲ့တာကိုလည်း တွေ့ရပါသည်။ ဤစာအုပ်ထဲတွင် စိတ်နယ်လွန်ဖြစ်ရပ်ဆန်းတွေကို ဖိုမအချစ်နှင့်ရောစပ်ပြီး စိတ်ဝင်စားစရာရေးဖွဲ့ထားပါသည်။</p>
+                        <div class="book-detail-to-detail">
+                            <div class="about-detail">
+                                <i class="far fa-bookmark"></i><span>Self-improvement</span><br/>
+                                <i class="far fa-file-alt"></i><span>200pages</span><br/>
+                                <i class="fas fa-hand-holding-usd"></i><span>8500ks</span><br/>
+                                <i class="fas fa-upload"></i><span>Published on 1st Oct</span><br/>
+                                <i class="fas fa-book-open"></i><span>#40500</span><br/>
+                            </div>
+                            <div class="about-detail-share">
+                                <i class="fas fa-share"></i><i class="fab fa-facebook"></i><i class="fab fa-telegram"></i>
+                            </div>
+                        </div>
                     </div>
                  </div>
                  <div class="footer">
