--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <a href="#">Reviews</a>
                         <a href="#">Categories</a>
                         <a href="#">About us</a>
-                        <button>Login</button>
+                        <i class="fas fa-search" class="search"></i>&nbsp;&nbsp;<span class="span-search">Search</span>
                         <i class="fas fa-shopping-cart"></i><span>0</span>
                     </div>
                  </nav>
@@ -32,7 +32,7 @@
                 <div class="top3">
                     <div class="book">
                         <img src="img/p1.jpg" alt="book1" />
-                        <a href="#">Detail</a>
+                        <a href="detail.html">Detail</a>
                     </div>
                     <div class="book">
                         <img src="img/p2.jpg" alt="book1" />
@@ -165,6 +165,7 @@
             <div class="review-aera">
                     <input type="text" name="review-code" id="" class="review-code" placeholder="Please type Book's Serial Code" />
                     <textarea rows="10" cols="40" placeholder="Please type your review"></textarea>
+                    <input type="submit" name="send" id="" class="send" />
             </div>
         </div> 
         <div class="footer">
@@ -195,8 +196,5 @@
                 <h4>&copy;Copyright digital libary 2021 all right reserved</h4>
             </div>
         </div>
-       
-
-
     </body>
 </html>
