--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Digital Libary</title>
-        <meta charset="UTF-8">
+        <!-- <meta charset="UTF-8"> -->
         <link href="css/detail.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
@@ -23,7 +23,7 @@
                 <div class="book-detail">
                     <div class="book-detail-to-buy">
                         <img src="img/p1.jpg"/>
-                        <a href="#">By Now</a>
+                        <a href="#">Add to Cart</a>
                     </div>
                     <div class="book-detail-caption">
                         <h2>ဆက်ပြီးမပွင့်နိုင်သောပန်းများ</h2>
