--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2>Are you finding the good one?</h2>
             <div class="search-bar-by">
                 <label>Keyword</label>
-                <input type="text" name="author" placeholder="By English/Myanmar Name" />
+                <input type="text" name="author" placeholder="By English/Myanmar" />
                 <button>search</button>
             </div>
         </div>
